Fixing dead blank spacing from animation library

--- a/CSS/About-Icons.css
+++ b/CSS/About-Icons.css
@@ -52,11 +52,11 @@
     font-size: 1.2rem;
   }
 
-  @media only screen and (max-width: 800px){
+  @media only screen and (max-width: 700px){
     
 	.logo{
-        width: 100%;
        
+    width: 100%;
     }
 
     .icon-container h1{
