--- a/CSS/NavBarIndex.css
+++ b/CSS/NavBarIndex.css
@@ -1,6 +1,7 @@
 *{
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 
@@ -72,7 +73,7 @@
 }
 
 
-@media(max-width:700px){
+@media only screen and (max-width:700px){
 
   .navbar{
     position: fixed;
